# siren

./: .typos.toml  Cargo.toml  README.md  flake.nix
assets/: magic_packet.drawio
src/: cli.rs  error.rs  lib.rs  mac.rs  main.rs  packet.rs  siren.rs
